--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 					<version>3.3.0</version>
 					<configuration>
 						<suiteXmlFiles>
-							<suiteXmlFile>testng.xml</suiteXmlFile>
+							<suiteXmlFile>userModule.xml</suiteXmlFile>
 						</suiteXmlFiles>
 					</configuration>
 				</plugin>
